<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movie_detail_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/desc_main_image"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars">

    </ImageView>

    <ImageView
        android:id="@+id/iv_second"
        android:layout_width="150dp"
        android:layout_height="220dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/desc_main_image"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_main"
        tools:src="@tools:sample/avatars">

    </ImageView>

    <TextView
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:id="@+id/tv_name"
        android:gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#9C27B0"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_second"
        app:layout_constraintTop_toBottomOf="@id/iv_main" />

    <TextView
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:id="@+id/tv_released"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/released"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_second"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <TextView
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/tv_when_released"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/tv_released"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <Button
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/movie_trailer"
        android:id="@+id/btn_show_trailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_second"
        app:layout_constraintTop_toBottomOf="@id/tv_released">

    </Button>

    <TextView
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/tv_desc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_second" />

    <TextView

        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_title" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>